[package]
name = "st"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]

# runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.30"
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# postgres
diesel = { version = "2.1", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }

# computation/optimisation libs
vrp-pragmatic = "1.23.0"
pathfinding = "4.8.2"

# general dependencies
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "5.5.3", features = ["serde"] }
dotenvy = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maplit = "1.0.2"
lazy_static = "1.4.0"
rand = "0.8.5"
warp = "0.3.6"
uuid = { version = "1.7.0", features = ["v4"] }

[profile.dev.package.vrp-pragmatic]
opt-level = 3
