[package]
name = "st"
version = "0.4.0"
edition = "2021"
default-run = "main"
publish = false
license = "MIT"

[dependencies]

# tokio/hyper stack
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.30"
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# postgres
diesel = { version = "2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }

# computation/optimisation libs
vrp-core = "1.25"
pathfinding = "4.8.2"

# general dependencies
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6", features = ["serde"] }
dotenvy = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
prettytable = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maplit = "1.0.2"
lazy_static = "1.4.0"
rand = "0.9"
uuid = { version = "1.7.0", features = ["v4"] }
regex = "1.10.3"
quadtree_rs = "0.1.3"
imageproc = "0.25"
moka = { version = "0.12.5", features = ["future"] }
strum = { version = "0.27", features = ["derive"] }
paste = "1.0.15"

[profile.dev.package.vrp-core]
opt-level = 3
